infrastructure/kubernetes/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  clusterIP: None
  selector: { app.kubernetes.io/name: postgresql }
  ports:
    - { name: postgres, port: 5432, targetPort: postgres }
